Changed to silhouette integration, added initial routes, added example slick w/ mysql integration, fixed travis env variables

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret="?W9PV0RN_@L76Uc/VM3v^Ho`@3/[]CbAZI3KWpNlV^WA3o/w7cs1@IvG^dg8EhB0"
+play.http.secret.key="?W9PV0RN_@L76Uc/VM3v^Ho`@3/[]CbAZI3KWpNlV^WA3o/w7cs1@IvG^dg8EhB0"
 
 # The application languages
 # ~~~~~
@@ -31,20 +31,32 @@ application.langs="en"
 # Default to Routes in the root package (and conf/routes)
 # application.router=my.application.Routes
 
-# Database configuration
+# Registers the request handler
 # ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
+
+# Registers the filters
+# ~~~~~
+play.http.filters = "utils.Filters"
+
+# Play-Slick configuration
+# ~~~~~
+# slick.dbs.default.driver="slick.driver.H2Driver$"
+# slick.dbs.default.db.driver="org.h2.Driver"
+# slick.dbs.default.db.url="jdbc:h2:mem:play"
+# slick.dbs.default.db.user=sa
+# slick.dbs.default.db.password=""
+
+slick.dbs.default.driver = "slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/moduledir"
+slick.dbs.default.db.user = "root"
+slick.dbs.default.db.password = ""
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+play.evolutions.autoApply=true
 
 # Logger
 # ~~~~~
@@ -60,10 +72,16 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-# Auth0 Information
-# ~~~~~~~~~~~~~~~~~
+# The asset configuration
+# ~~~~~
+play.assets {
+  path = "/public"
+}
 
-auth0.clientSecret=${?AUTH0_CLIENT_SECRET}
-auth0.clientId=${?AUTH0_CLIENT_ID}
-auth0.domain=${?AUTH0_DOMAIN}
-auth0.callbackURL=${?AUTH0_CALLBACK_URL}
+# The application DI modules
+# ~~~~~
+play.modules.enabled += "modules.SilhouetteModule"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorHandlerModule"
+
+include "silhouette.conf"
