--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,87 @@
-# https://www.playframework.com/documentation/latest/Configuration
+# This is the main configuration file for the application.
+# ~~~~~
+
+# Secret key
+# ~~~~~
+# The secret key is used to secure cryptographics functions.
+#
+# This must be changed for production, but we recommend not changing it in this file.
+#
+# See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
+play.http.secret.key="?W9PV0RN_@L76Uc/VM3v^Ho`@3/[]CbAZI3KWpNlV^WA3o/w7cs1@IvG^dg8EhB0"
+
+# The application languages
+# ~~~~~
+application.langs="en"
+
+# Global object class
+# ~~~~~
+# Define the Global object class for this application.
+# Default to Global in the root package.
+# application.global=Global
+
+# Router
+# ~~~~~
+# Define the Router object to use for this application.
+# This router will be looked up first when the application is starting up,
+# so make sure this is the entry point.
+# Furthermore, it's assumed your route file is named properly.
+# So for an application router like `my.application.Router`,
+# you may need to define a router file `conf/my.application.routes`.
+# Default to Routes in the root package (and conf/routes)
+# application.router=my.application.Routes
+
+# Registers the request handler
+# ~~~~~
+play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
+
+# Registers the filters
+# ~~~~~
+play.http.filters = "utils.Filters"
+
+# Play-Slick configuration
+# ~~~~~
+# slick.dbs.default.driver="slick.driver.H2Driver$"
+# slick.dbs.default.db.driver="org.h2.Driver"
+# slick.dbs.default.db.url="jdbc:h2:mem:play"
+# slick.dbs.default.db.user=sa
+# slick.dbs.default.db.password=""
+
+slick.dbs.default.driver = "slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/moduledir"
+slick.dbs.default.db.user = "root"
+slick.dbs.default.db.password = ""
+
+# Evolutions
+# ~~~~~
+# You can disable evolutions if needed
+play.evolutions.autoApply=true
+
+# Logger
+# ~~~~~
+# You can also configure logback (http://logback.qos.ch/),
+# by providing an application-logger.xml file in the conf directory.
+
+# Root logger:
+logger.root=ERROR
+
+# Logger used by the framework:
+logger.play=INFO
+
+# Logger provided to your application:
+logger.application=DEBUG
+
+# The asset configuration
+# ~~~~~
+play.assets {
+  path = "/public"
+}
+
+# The application DI modules
+# ~~~~~
+play.modules.enabled += "modules.SilhouetteModule"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorHandlerModule"
+
+include "silhouette.conf"
